--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,5 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
-    <string name="title_activity_unique_city">UniqueCityActivity</string>
+    <string name="title_activity_unique_city">City informations</string>
 </resources>
