--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
         completions."
     </string>
     <string name="title_activity_unique_city">City informations</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
